# WeekendRaytracer

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h  Plane.cpp  Plane.h  QuadraticHelper.h  Quaternion.cpp  Quaternion.h  README.md  Ray.cpp  Ray.h  Rotation.cpp  Rotation.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  main.cpp  util.h
